Fix: Adjusted sizing on mobile for Gallery

--- a/src/scss/_gallery.scss
+++ b/src/scss/_gallery.scss
@@ -7,7 +7,7 @@
 	gap: 2rem;
 	border: 2px solid utils.$dark-bg;
 	padding: 2rem;
-	padding-top: 0rem;
+	padding-top: 1.5rem;
 	background-color: utils.$dark-bg;
 }
 .gallery__text {
