--- a/src/scss/_mq.scss
+++ b/src/scss/_mq.scss
@@ -53,6 +53,9 @@
 		padding: 1rem;
 		margin-block: auto;
 	}
+	.gallery__wrapper {
+		padding: 0rem;
+	}
 	.pricing-wrapper {
 	}
 	img.preview {
